--- a/app.json
+++ b/app.json
@@ -18,7 +18,7 @@
     },
     "EMAIL_PORT": {
       "description": "SMTP config: port to connect to (defaults to 587 if is secure is false or 465 if true)",
-      "required": true
+      "required": false
     },
     "EMAIL_USER": {
       "description": "SMTP config: your email login",
