--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "serverless-form",
   "version": "1.0.13",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "dev": "nodemon ."
   },
   "author": "Alex Hoyau <a.hoyau@silexlabs.org> (https://lexoyo.me/)",
   "bugs": {
@@ -33,5 +34,8 @@
     "email capture form",
     "static site",
     "static"
-  ]
+  ],
+  "devDependencies": {
+    "nodemon": "^3.1.7"
+  }
 }
