run tests on push

--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -1,13 +1,14 @@
 name: Publish DockerHub image
-# from https://itsmetommy.com/2021/07/05/push-to-docker-hub-using-github-actions/
 
 on:
-  push:
-    tags:
-      - '*'
+  workflow_run:
+    workflows: ["Run tests"] # Triggers when the `test.yml` workflow completes
+    types:
+      - completed
 
 jobs:
   build-container:
+    if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.event.workflow_run.head_commit.message, 'v') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -32,5 +33,3 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-
