--- a/.github/workflows/docker-hub-publish.yml
+++ b/.github/workflows/docker-hub-publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build-container:
-    if: ${{ github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.head_commit.message == github.ref_name }}
+    if: ${{ github.event.workflow_run.conclusion == 'success' && startsWith(github.ref, 'refs/tags/') }}
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
