--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "formidable": "1.1.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "4.0.1"
   },
   "keywords": [
